<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.rahul_lohra.firebasechatapp.activities.LoginActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:id="@+id/et_email"
        android:hint="@string/email" />

    <EditText
        android:hint="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/et_email"
        android:layout_alignStart="@+id/et_email"
        android:layout_marginTop="58dp"
        android:id="@+id/et_password" />

    <Button
        android:text="@string/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_sign_up"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="21dp"
        android:id="@+id/btn_sign_in" />

    <Button
        android:text="@string/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:id="@+id/btn_sign_up"
        android:layout_below="@+id/et_password"
        android:layout_alignParentStart="true"
        android:layout_marginStart="37dp" />

    <Button
        android:text="@string/google_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_sign_up"
        android:layout_centerHorizontal="true"
        android:id="@+id/btn_google_sign_in" />
</RelativeLayout>
